# lsorm

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  settings.example.py  settings.py
.github/workflows/: CI.yaml  run_tests.yaml
examples/: main.py
lsorm/: __init__.py  models.py
tests/: __init__.py  test_answer_model.py  test_class_factory.py  test_label_model.py  tests_answer_model.py  tests_label_model.py
