[tool.poetry]
name = "lsorm"
version = "0.0.2"
description = "LimeSurvey ORM (lsorm) - An ORM package for LimeSurvey using SQLAlchemy"
authors = ["Viktor Sandström <v.sandstrom@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.10"
pandas = "^1.5.3"
SQLAlchemy = "^2.0.25"
PyYaml = "6.0.1"
pymysql = "1.1.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^4.1.0"
black = { version = "==23.3.0", optional = true }
isort = { version = "==5.12.0", optional = true }
flake8 = { version = "==6.0.0", optional = true }
mypy = { version = "==1.8.0", optional = true }


[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = 'black'

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | venv
  | migrations
)/
'''

[tool.mypy]
strict = false
python_version = "3.8"
ignore_missing_imports = true
warn_return_any = true
exclude = ["venv", ".venv", "examples"]
